@@ -41,3 +41,7 @@ and have it render like:
 > 
 > In the case of either bug, no, I don't have an idea of a solution yet.
 > --[[Joey]]
+
+> I've now solved a similar bug involving the smiley plugin. The code used
+> there should give some strong hints how to fix this bug, though I haven't
+> tried to apply the method yet. --[[Joey]]
